tests/expectations/compiler/mappings/external_read_with_local_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372005]: Unknown variable `users`
    --> compiler-test:11:35
     |
  11 |         let a:bool = Mapping::get(relay.aleo/users, addr);
     |                                   ^^^^^^^^^^^^^^^^
"""]
